Set Cayman theme via _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Keerthic Aswin"
-description: "Computational Biologist | RNA-seq & scRNA-seq Pipelines"
-theme: minima
+description: "Molecular Biologist with a knack for computation"
+theme: jekyll-theme-cayman
 author: Keerthic Aswin
 markdown: kramdown
 
